[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
once_cell = "1.18"
criterion = {version = "0.5.1", features = ["html_reports"]}
anyhow = "1.0"

[[bench]]
name= "bench"
harness = false





